[gd_scene load_steps=3 format=3 uid="uid://d3relvl1tgwvu"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_p34q3"]
[ext_resource type="Theme" uid="uid://icq10b8hxc47" path="res://ui/ui_theme.tres" id="2_f1g5y"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p34q3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 600.0
offset_bottom = 200.0
theme = ExtResource("2_f1g5y")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_f1g5y")
theme_override_font_sizes/font_size = 36
text = "Name"
vertical_alignment = 1

[node name="Dash" type="Label" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_f1g5y")
theme_override_font_sizes/font_size = 36
text = " - "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Class" type="Label" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Class
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dash2" type="Label" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_f1g5y")
theme_override_font_sizes/font_size = 36
text = " - "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Lv. 99"
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
rounded = true

[node name="ManaBar" type="TextureProgressBar" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionBar" type="Panel" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -230.0
offset_right = 400.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ActionBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Panel" type="Panel" parent="CanvasLayer/ActionBar/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/ActionBar/GridContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="CanvasLayer/ActionBar/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/ActionBar/GridContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel3" type="Panel" parent="CanvasLayer/ActionBar/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/ActionBar/GridContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel4" type="Panel" parent="CanvasLayer/ActionBar/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/ActionBar/GridContainer/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel5" type="Panel" parent="CanvasLayer/ActionBar/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/ActionBar/GridContainer/Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
